# vala-gnome-folders

./: .buildconfig  Makefile.am  README.md  configure.ac
src/: AppMainWindow.vala  Makefile.am  Utils.vala  main.vala
src/dialogs/: DrawerIconChooserDialog.vala  NewDrawerDialog.vala
src/tabs/: TabLabel.vala  TabsView.vala
src/tabs/content/: ScrolledWindowIconView.vala  ShortcutsIconView.vala
